@@ -23,6 +23,8 @@
     <File name="CheckNewExceptionWithoutThrowingRule.cs" subtype="Code" buildaction="Compile" />
     <File name="CheckNewThreadWithoutStartRule.cs" subtype="Code" buildaction="Compile" />
     <File name="DisableDebuggingCodeRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="ReplaceIncompleteOddnessCheckRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="ObsoleteMessagesShouldNotBeEmptyRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
