@@ -13,7 +13,8 @@ badpractice_rules_generated_sources = $(badpractice_rules_sources_in:.in=)
 badpractice_rules_sources = CloneMethodShouldNotReturnNullRule.cs EqualShouldHandleNullArgRule.cs \
 	ToStringReturnsNullRule.cs GetEntryAssemblyMayReturnNullRule.cs ConstructorShouldNotCallVirtualMethodsRule.cs \
 	CheckNewExceptionWithoutThrowingRule.cs CheckNewThreadWithoutStartRule.cs DisableDebuggingCodeRule.cs \
-	ObsoleteMessagesShouldNotBeEmptyRule.cs
+	ObsoleteMessagesShouldNotBeEmptyRule.cs \
+	ReplaceIncompleteOddnessCheckRule.cs
 
 badpractice_rules_build_sources = $(addprefix $(srcdir)/, $(badpractice_rules_sources))
 badpractice_rules_build_sources += $(badpractice_rules_generated_sources)
@@ -25,7 +26,8 @@ badpractice_rules_build_sources += $(badpractice_rules_generated_sources)
 badpractice_test_sources = CloneMethodShouldNotReturnNullTest.cs EqualShouldHandleNullArgTest.cs \
 	ToStringReturnsNullTest.cs GetEntryAssemblyMayReturnNullTest.cs ConstructorShouldNotCallVirtualMethodsTest.cs \
 	CheckNewExceptionWithoutThrowingTest.cs CheckNewThreadWithoutStartTest.cs DisableDebuggingCodeTest.cs \
-	ObsoleteMessagesShouldNotBeEmptyTest.cs
+	ObsoleteMessagesShouldNotBeEmptyTest.cs \
+	ReplaceIncompleteOddnessCheckTest.cs
 
 badpractice_test_build_sources = $(addprefix $(srcdir)/Test/, $(badpractice_test_sources))
 
